[package]
name = "zps"
version = "0.1.0"
authors = ["Zachary Schneider <sigil.66@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
event-emitter-rs = { git = "https://github.com/fezz-io/event_emitter_rs" }
semver = "0.9.0"
chrono = "0.4"
anyhow = "1.0.28"
strum = "0.20"
strum_macros = "0.20"
url = "2.1.1"
serde = "1.0.116"
serde_json = "1.0.44"
byteorder = "1.3.4"
zstd = "0.5"
bytes = "0.6.0"
walkdir = "2.3.1"
users = "0.11.0"
libxid = { git = "https://github.com/EventStore/libxid.git", branch = "enhance-platform-id" }
sha3 = "0.9.1"

[dependencies.kv]
version = "0.22.0"
features = ["json-value"]
